erDiagram
     COMPANY {
         int id PK
         string name
     }
     EMPLOYEE {
         int id PK
         int company_id FK
         string name
         string email
         string role
         boolean is_active
         boolean is_deleted
     }
     POSITION {
         int id PK
         int company_id FK
         int interview_flow_id FK
         string title
         text description
         enum status
         boolean is_visible
         string location
         numeric salary_min
         numeric salary_max
         enum employment_type
         string currency
         boolean is_deleted
     }
     POSITION_DETAILS {
         int id PK
         int position_id FK
         text job_description
         text requirements
         text responsibilities
         text benefits
         text company_description
     }
     INTERVIEW_FLOW {
         int id PK
         text description
     }
     INTERVIEW_STEP {
         int id PK
         int interview_flow_id FK
         int interview_type_id FK
         string name
         int order_index
     }
     INTERVIEW_TYPE {
         int id PK
         string name
         text description
     }
     CANDIDATE {
         int id PK
         string firstName
         string lastName
         string email
         string phone
         string address
     }
     EDUCATION {
         int id PK
         int candidate_id FK
         string institution
         string title
         date start_date
         date end_date
     }
     WORK_EXPERIENCE {
         int id PK
         int candidate_id FK
         string company
         string position
         string description
         date start_date
         date end_date
     }
     RESUME {
         int id PK
         int candidate_id FK
         string file_path
         string file_type
         date upload_date
     }
     APPLICATION {
         int id PK
         int position_id FK
         int candidate_id FK
         date application_date
         string status
         text notes
     }
     INTERVIEW {
         int id PK
         int application_id FK
         int interview_step_id FK
         int employee_id FK
         date interview_date
         string result
         int score
         text notes
         text feedback
     }

     COMPANY ||--o{ EMPLOYEE : employs
     COMPANY ||--o{ POSITION : offers
     POSITION ||--|| INTERVIEW_FLOW : assigns
     INTERVIEW_FLOW ||--o{ INTERVIEW_STEP : contains
     INTERVIEW_STEP ||--|| INTERVIEW_TYPE : uses
     POSITION ||--o{ APPLICATION : receives
     CANDIDATE ||--o{ APPLICATION : submits
     APPLICATION ||--o{ INTERVIEW : has
     INTERVIEW ||--|| INTERVIEW_STEP : consists_of
     EMPLOYEE ||--o{ INTERVIEW : conducts
     POSITION ||--|| POSITION_DETAILS : "has details"
     CANDIDATE ||--o{ EDUCATION : studies
     CANDIDATE ||--o{ WORK_EXPERIENCE : works
     CANDIDATE ||--o{ RESUME : uploads
